[gd_scene load_steps=3 format=2]

[ext_resource path="res://Texturs/8293dc1596096d62.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Settings_Popup.gd" type="Script" id=2]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
black_sc = true

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -384.0
margin_right = 683.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.0
margin_top = -524.0
margin_right = -12.0
margin_bottom = 58.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -2.0
margin_right = 23.0
margin_bottom = -390.0
rect_scale = Vector2( 2, 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="Popup/VBoxContainer"]
pause_mode = 2
margin_top = 140.0
margin_right = 97.0
margin_bottom = 160.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "Fullscreen"

[node name="Vsync" type="Button" parent="Popup/VBoxContainer"]
pause_mode = 2
margin_top = 164.0
margin_right = 97.0
margin_bottom = 184.0
focus_neighbour_left = NodePath("../Back")
focus_neighbour_top = NodePath("../Fullscreen")
focus_neighbour_bottom = NodePath(".")
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "Vectical_sync"

[node name="Back" type="Button" parent="Popup/VBoxContainer"]
pause_mode = 2
margin_top = 188.0
margin_right = 97.0
margin_bottom = 208.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "Back"

[node name="Music" type="HScrollBar" parent="Popup/VBoxContainer"]
margin_top = 212.0
margin_right = 97.0
margin_bottom = 224.0
min_value = -15.0
max_value = 15.0

[node name="Music" type="Label" parent="Popup/VBoxContainer/Music"]
margin_left = -40.5
margin_top = 1.0
margin_right = -2.5
margin_bottom = 32.0
text = "Music
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="HScrollBar" parent="Popup/VBoxContainer"]
margin_top = 228.0
margin_right = 97.0
margin_bottom = 240.0
min_value = -15.0
max_value = 15.0

[node name="Sound" type="Label" parent="Popup/VBoxContainer/Sound"]
margin_left = -40.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = 49.0
text = "Sound

"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="about_to_show" from="Popup" to="." method="_on_Popup_about_to_show"]
[connection signal="popup_hide" from="Popup" to="." method="_on_Popup_popup_hide"]
[connection signal="pressed" from="Popup/VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/Vsync" to="." method="_on_Vsync_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="scrolling" from="Popup/VBoxContainer/Music" to="." method="_on_Music_scrolling"]
[connection signal="scrolling" from="Popup/VBoxContainer/Sound" to="." method="_on_Sound_scrolling"]
